# easy-cms

./: README.rst  pyproject.toml
easy_cms/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
easy_cms/migrations/: 0001_initial.py  0002_image_alt_image_height_image_image_title_image_width.py  0003_title_css_class_title_tag.py  0004_remove_title_css_class_component_css_class.py  0005_page_parent.py  0006_page_order.py  0007_alter_page_options.py  0008_alter_page_parent.py  0009_page_title.py  0010_paragraphtwocols.py  0011_alter_image_height_alter_image_width.py  0012_alter_image_height_alter_image_image_file_and_more.py  0013_alter_image_alt_alter_image_height_and_more.py  0014_alter_image_height_alter_image_width.py
easy_cms/static/easy_cms/: easy_cms.css  easy_cms_edit.js
easy_cms/static/easy_cms/bootstrap/css/: bootstrap.min.css  bootstrap.min.css.map
easy_cms/static/easy_cms/bootstrap/scss/: easy_survey.scss
easy_cms/templates/easy_cms/: base.html  edit.html  home.html  nav.html  page.html
easy_cms/templates/easy_cms/components/: hx.html  image.html  page.html  paragraph.html  paragraph_two_cols.html  title.html
easy_cms/templatetags/: nav.py
